--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dhika & Nofa Wedding</title>
+  <title>Bahrul & Septin Wedding</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -13,10 +13,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;300;400;600;700&display=swap"
     rel="stylesheet">
-
-  <!-- simplyCountdown -->
-  <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
-  <script src="countdown/simplyCountdown.min.js"></script>
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -29,18 +25,18 @@
   <section id="hero"
     class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
     <main>
-      <h4>Kepada <span>Bapak/Ibu/Saudara/i, </span></h4>
-      <h1>Sandhika & Nofariza</h1>
-      <p>Akan melangsungkan resepsi pernikahan dalam:</p>
-      <div class="simply-countdown"></div>
-      <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">Lihat Undangan</a>
-    </main>
+      <h1>Bahrul & Septin</h1>
+      <div style="background-color: rgba(67, 56, 56, 0.8); padding: 20px 2px; border-radius: 8px;margin-top: 30px;bottom: 0;">
+        <h4>Kepada <span>Yth, </span></h4>
+      </div>
+      <a href="javascript:void(0)" class="btn btn-lg mt-4" onclick="goToUndangan()">Lihat Undangan</a>
 
+    </main>
   </section>
 
   <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
     <div class="container">
-      <a class="navbar-brand" href="#">Dino</a>
+      <a class="navbar-brand" href="#">B & S</a>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -50,27 +46,17 @@
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Dino</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="#home">Home</a>
-            <a class="nav-link" href="#info">Info</a>
-            <a class="nav-link" href="#story">Story</a>
-            <a class="nav-link" href="#gallery">Gallery</a>
-            <a class="nav-link" href="#rsvp">RSVP</a>
-            <a class="nav-link" href="#gifts">Gifts</a>
-          </div>
-        </div>
       </div>
     </div>
   </nav>
 
-  <section id="home" class="home">
+  <section class="home">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
           <h2>Acara Pernikahan</h2>
-          <h3>Diselenggarakan pada 20 November 2023 di Bandung, Jawa Barat.</h3>
-          <p>Oleh karena itu, d engan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir
+          <h3>Diselenggarakan pada 11 Juni di Penawungan, Lumajang.</h3>
+          <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir
             pada acara pernikahan kami. </p>
         </div>
       </div>
@@ -79,13 +65,11 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-8 text-end">
-              <h3>Sandhika Galih</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque praesentium aut ipsa perferendis,
-                incidunt soluta?</p>
+              <h3>Bahrul Ulum</h3>
               <p>Putra dari Bpk. Lorem <br> dan <br> Ibu Ipsum</p>
             </div>
             <div class="col-4">
-              <img src="img/sandhika.png" alt="Sandhika Galih" class="img-responsive rounded-circle">
+              <img src="img/bahrul.jpg" alt="Bahrul Ulum" class="img-responsive rounded-circle">
             </div>
           </div>
         </div>
@@ -110,7 +94,7 @@
   </section>
 
 
-  <section id="info" class="info">
+  <section class="info">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
@@ -175,186 +159,7 @@
     </div>
   </section>
 
-  <section id="story" class="story">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8 col-10 text-center">
-          <span>Bagaimana Cinta Kami Bersemi</span>
-          <h2>Cerita Kami</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, similique non soluta nulla asperiores
-            voluptatem.</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image" style="background-image: url(img/sman23.jpg);"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3>Pertama Bertemu</h3>
-                  <span>1 Juni 2000</span>
-                </div>
-                <div class="timeline-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, modi autem? Commodi autem quo quia?
-                  </p>
-                </div>
-              </div>
-
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3>Mulai Serius</h3>
-                  <span>1 Januari 2005</span>
-                </div>
-                <div class="timeline-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
-                    itaque explicabo quisquam quos at.
-                  </p>
-                </div>
-              </div>
-
-            </li>
-            <li>
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3>Tunangan</h3>
-                  <span>7 November 2009</span>
-                </div>
-                <div class="timeline-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, deleniti distinctio. Esse quas sit
-                  explicabo corporis magni qui expedita a.
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="gallery" class="gallery">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8 col-10 text-center">
-          <span>Memori Kisah Kami</span>
-          <h2>Galeri Foto</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, itaque?</p>
-        </div>
-      </div>
-
-      <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
-        <div class="col mt-3">
-          <a href="img/gallery/1.png" data-toggle="lightbox" data-caption="Sandhika & Nofa 1" data-gallery="mygallery">
-            <img src="img/gallery/thumbnail/1.png" alt="Sandhika & Nofa 1" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="https://picsum.photos/id/300/1200/768" data-toggle="lightbox" data-caption="Sandhika & Nofa 2"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/300/300/400" alt="Sandhika & Nofa 2" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="https://picsum.photos/id/301/1200/768" data-toggle="lightbox" data-caption="Sandhika & Nofa 3"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/301/300/400" alt="Sandhika & Nofa 3" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="https://picsum.photos/id/302/1200/768" data-toggle="lightbox" data-caption="Sandhika & Nofa 4"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/302/300/400" alt="Sandhika & Nofa 4" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="https://picsum.photos/id/304/1200/768" data-toggle="lightbox" data-caption="Sandhika & Nofa 5"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/304/300/400" alt="Sandhika & Nofa 5" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="https://picsum.photos/id/305/1200/768" data-toggle="lightbox" data-caption="Sandhika & Nofa 6"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/305/300/400" alt="Sandhika & Nofa 6" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="rsvp" class="rsvp">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8 col-10 text-center">
-          <h2>Konfirmasi Kehadiran</h2>
-          <p>Isi form di bawah ini untuk melakukan konfirmasi kehadiran.</p>
-        </div>
-      </div>
-
-      <form class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST"
-        action="https://script.google.com/macros/s/AKfycbyddFbEJRqwEeA6OmZAuNf0jw_B30ZUOS5qSDwlAKV_nurcW7H6osJx2ZWnIeTmPm_35g/exec"
-        id="my-form">
-        <div class="col-12">
-          <div class="mb-3">
-            <label for="nama" class="form-label">Nama</label>
-            <input type="text" class="form-control" id="nama" name="nama">
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="mb-3">
-            <label for="jumlah" class="form-label">Jumlah</label>
-            <input type="number" class="form-control" id="jumlah" name="jumlah" min="1" max="5" length="1" value="1">
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="mb-3">
-            <label for="status" class="form-label">Konfirmasi</label>
-            <select name="status" id="status" class="form-select">
-              <option selected>Pilih salah satu</option>
-              <option value="Hadir">Hadir</option>
-              <option value="Tidak Hadir">Tidak Hadir</option>
-            </select>
-          </div>
-        </div>
-        <div class="col-12" style="margin-top: 35px;">
-          <button class="btn btn-primary">Kirim</button>
-        </div>
-      </form>
-
-      <div class="row justify-content-center mt-5">
-        <div class="col-md-6">
-          <div id="disqus_thread"></div>
-          <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-
-            var disqus_config = function () {
-              this.page.url = 'https://sandhikagalih.me';  // Replace PAGE_URL with your page's canonical URL variable
-              this.page.identifier = 'https://sandhikagalih.me'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-
-            (function () { // DON'T EDIT BELOW THIS LINE
-              var d = document, s = d.createElement('script');
-              s.src = 'https://dino-wedding-1.disqus.com/embed.js';
-              s.setAttribute('data-timestamp', +new Date());
-              (d.head || d.body).appendChild(s);
-            })();
-          </script>
-          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-              Disqus.</a></noscript>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <section id="gifts" class="gifts">
+  <section class="gifts">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
@@ -529,6 +334,25 @@
 
     document.querySelector('#nama').value = nama;
   </script>
+
+  window.addEventListener("DOMContentLoaded", () => {
+    const nama = getQueryParam("to");
+    if (nama) {
+      const h4 = document.querySelector("#hero h4");
+      if (h4) {
+        const spanNama = document.createElement("span");
+        spanNama.textContent = nama;
+        spanNama.style.color = "#FFD700"; // Warna emas, bisa kamu ganti
+        spanNama.style.fontWeight = "bold";
+        spanNama.style.marginLeft = "4px"; // Jarak dari koma
+
+        h4.appendChild(spanNama);
+      }
+    }
+  });
+</script>
+
+
 </body>
 
 </html>
